adicionados os submodulos java e flex commons e o swizframework